2005-08-23  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/timer_routines.c: Don't block SIGSETXID ever.

2005-07-11  Jakub Jelinek  <jakub@redhat.com>

	[BZ #1102]
	* sysdeps/pthread/pthread.h (PTHREAD_MUTEX_INITIALIZER,
	PTHREAD_RECURSIVE_MUTEX_INITIALIZER_NP,
	PTHREAD_ERRORCHECK_MUTEX_INITIALIZER_NP,
	PTHREAD_MUTEX_ADAPTIVE_NP, PTHREAD_RWLOCK_INITIALIZER,
	PTHREAD_RWLOCK_WRITER_NONRECURSIVE_INITIALIZER_NP,
	PTHREAD_COND_INITIALIZER): Supply zeros for all fields
	in the structure.
	* Makefile (tests): Add tst-initializers1.
	(CFLAGS-tst-initializers1.c): Set.
	* tst-initializers1.c: New test.

2005-07-11  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/alpha/bits/pthreadtypes.h (pthread_rwlock_t):
	Make sure __flags are located at offset 48 from the start of the
	structure.

2005-07-02  Roland McGrath  <roland@redhat.com>

	* Makeconfig: Comment fix.

2005-07-05  Jakub Jelinek  <jakub@redhat.com>

	* descr.h (PTHREAD_STRUCT_END_PADDING): Define.
	* sysdeps/ia64/tls.h (TLS_PRE_TCB_SIZE): If PTHREAD_STRUCT_END_PADDING
	is smaller than 8 bytes, increase TLS_PRE_TCB_SIZE by 16 bytes.
	(THREAD_SYSINFO, THREAD_SELF, DB_THREAD_SELF): Don't assume
	TLS_PRE_TCB_SIZE is sizeof (struct pthread).
	(THREAD_SET_STACK_GUARD, THREAD_COPY_STACK_GUARD): Define.
	* sysdeps/ia64/tcb-offsets.sym (PID, TID, MULTIPLE_THREADS_OFFSET):
	Use TLS_PRE_TCB_SIZE instead of sizeof (struct pthread).
	* sysdeps/unix/sysv/linux/ia64/createthread.c (TLS_VALUE): Don't
	assume TLS_PRE_TCB_SIZE is sizeof (struct pthread).

2005-06-25  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/i386/tls.h (tcbhead_t): Add stack_guard field.
	(THREAD_SET_STACK_GUARD, THREAD_COPY_STACK_GUARD): Define.
	* sysdeps/x86_64/tls.h (tcbhead_t): Add sysinfo and stack_guard
	fields.
	(THREAD_SET_STACK_GUARD, THREAD_COPY_STACK_GUARD): Define.
	* sysdeps/s390/tls.h (tcbhead_t): Add stack_guard
	field.  Put in sysinfo field unconditionally.