@@ -1,6 +1,8 @@
 2005-08-23  Ulrich Drepper  <drepper@redhat.com>
 
-	* sysdeps/unix/sysv/linux/timer_routines.c: Don't block SIGSETXID ever.
+	* sysdeps/unix/sysv/linux/timer_routines.c (timer_helper_thread):
+	Use __sigfillset.  Document that sigfillset does the right thing wrt
+	to SIGSETXID.
 
 2005-07-11  Jakub Jelinek  <jakub@redhat.com>
 
